# azure-functions-graphhelper

./: .gitignore  README.md  azure-functions-graphhelper.code-workspace  coretest.py  pyproject.toml  resquesttest.py
.github/: release.yml
.github/workflows/: build-and-publish-to-pypi.yml
msgraphhelper/: session.py  subscriptions.py
test/datafixtures/: paginator_C1_01.json  paginator_C1_02.json  paginator_C1_03.json  paginator_C1_04.json  paginator_HA_01.json  paginator_HA_02.json  paginator_HA_03.json  paginator_HA_04.json  paginator_HH_01.json
test/functions-v2-runtime/: function_app.py  requirements.txt
